@@ -4,6 +4,9 @@
 // $Id$
 //
 // $Log$
+// Revision 1.117  2006/12/08 09:43:21  jj
+// Add CVS message log
+//
 
 /*-------------------------------------------------------------------*/
 /* Default features                                                  */
@@ -27,7 +30,6 @@
 #undef  OPTION_NO_INLINE_LOGICAL        /* Performance option        */
 #undef  OPTION_NO_INLINE_VSTORE         /* Performance option        */
 #undef  OPTION_NO_INLINE_IFETCH         /* Performance option        */
-#define OPTION_NO_CS_MAINLOCK           /* Performance option        */
 #define OPTION_MULTI_BYTE_ASSIST        /* Performance option        */
 #define OPTION_FAST_DEVLOOKUP           /* Fast devnum/subchan lookup*/
 #define OPTION_IODELAY_KLUDGE           /* IODELAY kludge for linux  */
