@@ -1,3 +1,4 @@
+19 Dec 2006 Backout mainlockx.pat - possible SMP problmes - Greg Smith
 19 Dec 2006 New FPC command to display FPC register - Roger Bowler
 17 Dec 2006 Modify FPR command to display FP registers in pairs - Roger Bowler
 17 Dec 2006 Display DXC in msg HHCCP014I for PIC7 - Roger Bowler
